--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "type": "library",
     "require": {
         "php": ">=7.2",
-        "yiisoft/yii2": "~2.0"
+        "yiisoft/yii2": "~2.0",
+        "frostealth/yii2-aws-s3": "^2.1",
+        "intervention/image": "^2.5",
+        "ext-imagick": "*"
     },
     "license": "MIT",
     "authors": [
