--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "yiisoft/yii2": "~2.0",
         "frostealth/yii2-aws-s3": "^2.1",
         "intervention/image": "^2.5",
+        "spatie/image-optimizer": "^1.2",
         "ext-imagick": "*"
     },
     "license": "MIT",
